tests/e2e/gateway/01-install-hydra.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hydra
spec:
  selector:
    matchLabels:
      app: hydra
  template:
    metadata:
      labels:
        app: hydra
    spec:
      containers:
      - name: hydra
        image: docker.io/oryd/hydra:v2.2.0
        command: ["hydra", "serve", "all", "--dev", "--sqa-opt-out"]
        env:
        - name: DSN
          value: memory
        - name: SECRETS_SYSTEM
          value: saf325iouepdsg8574nb39afdu
        - name: URLS_SELF_ISSUER
          value: http://hydra:4444
        - name: STRATEGIES_ACCESS_TOKEN
          value: jwt
---
apiVersion: v1
kind: Service
metadata:
  name: hydra
spec:
  selector:
    app: hydra
  ports:
  - name: public
    port: 4444
  - name: internal
    port: 4445
