tests/e2e/gateway/02-install.yaml
---
apiVersion: tempo.grafana.com/v1alpha1
kind: TempoStack
metadata:
  name: foo
spec:
  images:
    tempo: docker.io/grafana/tempo:2.0.1
    tempoQuery: docker.io/grafana/tempo-query:main-779a156
    tempoGateway: quay.io/observatorium/api:main-2023-02-09-v0.1.2-329-g1ff4f11
  template:
    queryFrontend:
      jaegerQuery:
        enabled: true
    gateway:
      enabled: true
  storage:
    secret:
      type: s3
      name: minio-test
  storageSize: 200M
  tenants:
    mode: static
    authentication:
      - tenantName: test-oidc
        tenantId: test-oidc
        oidc:
          issuerURL: http://dex.svc:30556/dex
          redirectURL: http://tempo-foo-gateway.svc:8080/oidc/test-oidc/callback
          usernameClaim: email
          secret:
            name: oidc-test
    authorization:
      roleBindings:
      - name: "test"
        roles:
        - read-write
        subjects:
        - kind: user
          name: "admin@example.com"
      roles:
      - name: read-write
        permissions:
        - read
        - write
        resources:
        - logs
        - metrics
        - traces
        tenants:
        - test-oidc
