tests/e2e/gateway/01-assert.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: querier
    app.kubernetes.io/created-by: tempo-controller
    app.kubernetes.io/instance: foo
    app.kubernetes.io/managed-by: tempo-controller
    app.kubernetes.io/name: tempo
  name: tempo-foo-querier
spec:
  ports:
    - name: http-memberlist
      port: 7946
      protocol: TCP
      targetPort: http-memberlist
    - name: http
      port: 3200
      protocol: TCP
      targetPort: http
    - name: grpc
      port: 9095
      protocol: TCP
      targetPort: grpc
  selector:
    app.kubernetes.io/component: querier
    app.kubernetes.io/created-by: tempo-controller
    app.kubernetes.io/instance: foo
    app.kubernetes.io/managed-by: tempo-controller
    app.kubernetes.io/name: tempo
