tests/e2e/gateway/02-assert.yaml
apiVersion: batch/v1
kind: Job
metadata:
  name: setup-hydra
status:
  succeeded: 1
---
apiVersion: v1
kind: Secret
metadata:
   name: tenant1-secret
