tests/e2e/gateway/03-assert.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo-foo-gateway
status:
  readyReplicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo-foo-distributor
status:
  readyReplicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo-foo-querier
status:
  readyReplicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo-foo-compactor
status:
  readyReplicas: 1
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tempo-foo-ingester
status:
  readyReplicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo-foo-query-frontend
status:
  readyReplicas: 1
