tests/e2e/gateway/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: gateway
spec:
  timeouts:
    cleanup: 5m
  steps:
  - name: step-00
    try:
    - apply:
        file: 00-install-storage.yaml
    - assert:
        file: 00-assert.yaml
  - name: step-01
    try:
    - apply:
        file: 01-install-hydra.yaml
    - assert:
        file: 01-assert.yaml
  - name: step-02
    try:
    - apply:
        file: 02-setup-hydra.yaml
    - assert:
        file: 02-assert.yaml
  - name: step-03
    try:
    - apply:
        file: 03-install-tempo.yaml
    - assert:
        file: 03-assert.yaml
  - name: step-04
    try:
    - apply:
        file: 04-generate-traces.yaml
    - assert:
        file: 04-assert.yaml
  - name: step-05
    try:
    - apply:
        file: 05-verify-traces.yaml
    - assert:
        file: 05-assert.yaml
